# tree-sitter-kdl

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: kdl.h
examples/: 01-basic.kdl  02-multiple-values.kdl  03-properties.kdl  04-child-nodes.kdl  05-node-terminators.kdl  06-string-formats.kdl  07-multiline-string.kdl  08-raw-string.kdl  09-number.kdl  10-number-forms.kdl  11-number-with-underscores.kdl  12-comments.kdl  13-slashdash-comments.kdl  14-type-annotations.kdl  15-rich-example.kdl
queries/: highlights.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: node  node.txt
